--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "es6-promise": "^4.2.8",
         "vue-async-computed": "^3.9.0",
         "vue-router": "^3.5.2",
-        "vuex": "^4.0.2"
+        "vuex": "^3.6.2"
     }
 }
