--- a/.editorconfig
+++ b/.editorconfig
@@ -4,12 +4,14 @@ root = true
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-indent_style = space
+indent_style = tab
 indent_size = 4
+max_line_length = off
 trim_trailing_whitespace = true
 
 [*.md]
-trim_trailing_whitespace = false
+insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.{yml,yaml}]
 indent_size = 2
