--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     },
     "dependencies": {
         "es6-promise": "^4.2.8",
+        "ts-loader": "^9.2.5",
+        "typescript": "^4.4.2",
         "vue-router": "^3.5.2",
         "vuex": "^3.6.2"
     }
