--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-D_TEST_DATABASE=
+DB_TEST_DATABASE=
 DB_USERNAME=root
 DB_PASSWORD=
 
